tests/control_flow/valid/complex_expressions/mixed_types.src
fn main() -> int {
    int x = 5;
    int z = x + 10;
    return z;
}