tests/control_flow/invalid/type_errors/bool_to_int.src
fn main() -> int {
    bool flag = true;
    int x = flag;
    return x;
}